# rmcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  RMCP_SECURITY.md  demo.ps1  dummy_server.py  rmcp.json  sharelock_defense.json  shield_graph.json  shield_policy.json  shield_report.json  test_policy.json
.github/workflows/: ci.yml  release.yml
crates/shield-cli/: Cargo.toml
crates/shield-cli/src/: main.rs
crates/shield-firewall/: Cargo.toml
crates/shield-firewall/src/: lib.rs
crates/shield-mesa/: Cargo.toml
crates/shield-mesa/src/: lib.rs
docs/: agent_control_plane_exploit.md  architecture.md  council_evaluation.md  eli5_readme.md  implementation_plan.md  mcp_security_gateway_exploit.md  test_coverage_report.html
graphify-out/: .graphify_detect.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
skills/: rmcp-builder.md  rmcp-qa.md  rmcp-shield-builder.md
src/: config.rs  main.rs  policy.rs  proxy.rs  shield.rs  template.rs
templates/: prompt_injection.json
templates_test_dummy/: resumearmor.json
tests/: integration_test.rs
