[package]
name = "rmcp"
version = "0.3.3"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
shield-firewall = { path = "crates/shield-firewall" }
shield-mesa = { path = "crates/shield-mesa" }
clap = { version = "4", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["std"] }
aho-corasick = "1.1"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }

[workspace]
members = [
    ".",
    "crates/shield-mesa",
    "crates/shield-firewall"
]
